raffia/tests/error/scss/selectors/empty-placeholder.snap
---
source: raffia/tests/error.rs
---
error: unexpected whitespace
  ┌─ empty-placeholder.scss:1:2
  │
1 │ % {
  │  ^


